--- a/schedule.html
+++ b/schedule.html
@@ -12,8 +12,14 @@
     border: 1px solid black;
     border-collapse: collapse;
   }
-  th, td {
+  th {
     padding: 5px;
+    background-color: rgb(0, 0, 0); 
+    text-align: center;
+    color: #ffffff
+  }
+  td {
+    padding:5px;
   }
             body {
 			 /* font-family: 'IBM Plex Sans', sans-serif; */
