--- a/schedule.html
+++ b/schedule.html
@@ -11,7 +11,8 @@
   table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
-  }
+    margin-left:auto;
+    margin-right:auto}
   th {
     padding: 5px;
     background-color: rgb(0, 0, 0); 
