--- a/schedule.html
+++ b/schedule.html
@@ -12,7 +12,8 @@
     border: 1px solid black;
     border-collapse: collapse;
     margin-left:auto;
-    margin-right:auto}
+    margin-right:auto
+}
   th {
     padding: 5px;
     background-color: rgb(0, 0, 0); 
