Fix LaTeX syntax in schedule and comment out old MathJax script

--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,7 @@
     <head>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4.0.0/tex-mml-chtml.js"></script>
 		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+		<!-- <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital@0;1&display=swap" rel="stylesheet">
@@ -63,7 +63,7 @@ a:hover {
   <tr>
     <td>06/10/25</td>
     <td style="text-align: center;" >02</td>
-    <td>$\LaTeX$ and writing mathematics</td>
+    <td>\( \LaTeX \)$ and writing mathematics</td>
   </tr>
   <tr>
     <td>13/10/25</td>
