--- a/schedule.html
+++ b/schedule.html
@@ -63,12 +63,12 @@ a:hover {
   <tr>
     <td>06/10/25</td>
     <td style="text-align: center;" >02</td>
-    <td>\( \LaTeX \)$ and writing mathematics</td>
+    <td>\( \LaTeX \) and writing mathematics</td>
   </tr>
   <tr>
     <td>13/10/25</td>
     <td style="text-align: center;">03</td>
-    <td>$\LaTeX$ and writing mathematics</td>
+    <td>\( \LaTeX \) and writing mathematics</td>
   </tr>
   <tr>
     <td>20/10/25</td>
