--- a/slides/gdeintro.html
+++ b/slides/gdeintro.html
@@ -211,6 +211,10 @@ Assessment week 02
 </td>
 </tr>
 </table>
+<p>
+<span data-tyle="background-color: rgba(255, 145, 56, 0.87);">Delivered
+by guest lecturer from Careers Service</span>
+</p>
 </section>
     </div>
   </div>
