--- a/slides/gdeintro.html
+++ b/slides/gdeintro.html
@@ -210,11 +210,15 @@ Assessment week 01
 Assessment week 02
 </td>
 </tr>
-</table>
-<p>
-<span data-tyle="background-color: rgba(255, 145, 56, 0.87);">Delivered
+<tr>
+<td>
+</td>
+<td>
+<span data-syle="background-color: rgba(255, 145, 56, 0.87);">Delivered
 by guest lecturer from Careers Service</span>
-</p>
+</td>
+</tr>
+</table>
 </section>
     </div>
   </div>
