--- a/slides/gdeintro.html
+++ b/slides/gdeintro.html
@@ -214,8 +214,8 @@ Assessment week 02
 <td>
 </td>
 <td>
-<span data-syle="background-color: rgba(255, 145, 56, 0.87);">Delivered
-by guest lecturer from Careers Service</span>
+<span style="background-color: rgba(255, 145, 56, 0.87);">Delivered by a
+guest lecturer from Man Met Careers</span>
 </td>
 </tr>
 </table>
