--- a/slides/gdeintro.html
+++ b/slides/gdeintro.html
@@ -59,9 +59,7 @@ skills and experience</li>
 <li>a group work report on a mathematical topic</li>
 </ul></li>
 </ul>
-</section>
-<section id="the-module-teaching-and-syllabus" class="slide level2">
-<h2>The module | Teaching and Syllabus</h2>
+<!-- ## The module | Teaching and Syllabus -->
 </section>
 <section id="calendar" class="slide level2">
 <h2>Calendar</h2>
