--- a/schedule.html
+++ b/schedule.html
@@ -42,11 +42,11 @@ a:hover {
     </head>
 <body>
 
-<table>
+<table border="1" cellpadding="2" cellspacing="0" width="100%"">
   <tr>
-    <th>Monday</th>
-    <th>Week</th>
-    <th>Topics and resources</th>
+    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Monday</th>
+    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Week</th>
+    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Topics and resources</th>
   </tr>
   <tr>
     <td>22/09/25</td>
