--- a/schedule.html
+++ b/schedule.html
@@ -44,72 +44,70 @@ a:hover {
 
 <table border="1" cellpadding="2" cellspacing="0" width="100%"">
   <tr>
-    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Monday</th>
-    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Week</th>
-    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Topics and resources</th>
+    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">week no. &middot; Monday</th>
+    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Topic</th>
+    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Links to resources</th>
   </tr>
   <tr>
-    <td>22/09/25</td>
-    <td style="text-align: center;">00</td>
+    <td>00 &middot; 22/09/25</td>
     <td>Induction week</td>
+    <td></td>
   </tr>
   <tr>
-    <td>29/09/25</td>
-    <td style="text-align: center;">01</td>
-    <td>Module introduction, being a mathematician<br>
-        Lecture slides</td>
-    </td>
+    <td>01 &middot; 29/09/25</td>
+    <td>Module introduction, being a mathematician</td>
+    <td></td>
   </tr>
   <tr>
-    <td>06/10/25</td>
-    <td style="text-align: center;" >02</td>
+    <td>02 &middot; 06/10/25</td>
     <td>\( \LaTeX \) and writing mathematics</td>
-  </tr>
+  <td></td>
+</tr>
   <tr>
-    <td>13/10/25</td>
-    <td style="text-align: center;">03</td>
+    <td>03 &middot; 13/10/25</td>
     <td>\( \LaTeX \) and writing mathematics</td>
-  </tr>
+  <td></td>
+</tr>
   <tr>
-    <td>20/10/25</td>
-    <td style="text-align: center;">04</td>
+    <td>04 &middot; 20/10/25</td>
     <td>Report writing and coursework</td>
-  </tr>
+  <td></td>
+</tr>
   <tr>
-    <td>27/10/25</td>
-    <td style="text-align: center;">05</td>
+    <td>05 &middot; 27/10/25</td>
     <td>Career choices, planning and goal setting</td>
-  </tr>
+  <td></td>
+</tr>
   <tr>
-    <td>03/11/25</td>
-    <td style="text-align: center;">06</td>
+    <td>06 &middot; 03/11/25</td>
     <td>Presentation skills</td>
-  </tr>
+  <td></td>
+</tr>
   <tr>
-    <td>10/11/25</td>
-    <td style="text-align: center;">07</td>
+    <td>07 &middot; 10/11/25</td>
     <td>CV and cover letter writing</td>
-  </tr>
+  <td></td>
+</tr>
   <tr>
-    <td>17/11/25</td>
-    <td style="text-align: center;">08</td>
+    <td>08 &middot; 17/11/25</td>
     <td>Referencing in academic writing</td>
-  </tr>
+  <td></td>
+</tr>
   <tr>
-    <td>24/11/25</td>
-    <td style="text-align: center;">09</td>
+    <td>09 &middot; 24/11/25</td>
     <td>Building an effective LinkedIn profile</td>
-  </tr>
+  <td></td>
+</tr>
   <tr>
-    <td>1/12/25</td>
-    <td style="text-align: center;">10</td>
+    <td>10 &middot; 01/12/25</td>
     <td>Coursework support and presentations</td>
-  </tr>
+  <td></td>
+</tr>
   <tr>
-    <td>8/12/25</td>
-    <td style="text-align: center;">11</td>
+    <td>11 &middot; 08/12/25</td>
     <td>Coursework support and presentations</td>
-  </tr>
+  <td></td>
+</tr>
   <tr>
     <td>15/12/25</td>
     <td></td>
