--- a/schedule.html
+++ b/schedule.html
@@ -44,7 +44,7 @@ a:hover {
 
 <table border="1" cellpadding="2" cellspacing="0" width="100%"">
   <tr>
-    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">week no. &middot; Monday</th>
+    <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">week &middot; Monday</th>
     <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Topic</th>
     <th style="background-color: rgb(0, 0, 0); text-align: center;"><span style="color:#ffffff;">Links to resources</th>
   </tr>
@@ -115,22 +115,18 @@ a:hover {
   </tr>
   <tr>
     <td>22/12/25</td>
-    <td></td>
     <td style="text-align: center;">Christmas break</td>
   </tr>
   <tr>
     <td>29/12/25</td>
-    <td></td>
     <td style="text-align: center;">Christmas break</td>
   </tr>
     <tr>
     <td>05/01/26</td>
-    <td></td>
     <td style="text-align: center;">Assessment week 01</td>
   </tr>
     <tr>
     <td>12/01/26</td>
-    <td></td>
     <td style="text-align: center;">Assessment week 02</td>
   </tr>
 </table>
