--- a/schedule.html
+++ b/schedule.html
@@ -75,7 +75,7 @@ a:hover {
 </tr>
   <tr>
     <td>05 &middot; 27/10/25</td>
-    <td>Career choices, planning and goal setting</td>
+    <td style="background-color:orange;" >Career choices, planning and goal setting</td>
   <td></td>
 </tr>
   <tr>
@@ -85,7 +85,7 @@ a:hover {
 </tr>
   <tr>
     <td>07 &middot; 10/11/25</td>
-    <td>CV and cover letter writing</td>
+    <td style="background-color:orange;">CV and cover letter writing</td>
   <td></td>
 </tr>
   <tr>
@@ -95,7 +95,7 @@ a:hover {
 </tr>
   <tr>
     <td>09 &middot; 24/11/25</td>
-    <td>Building an effective LinkedIn profile</td>
+    <td style="background-color:orange;">Building an effective LinkedIn profile</td>
   <td></td>
 </tr>
   <tr>
@@ -111,15 +111,15 @@ a:hover {
   <tr>
     <td>15/12/25</td>
     <td></td>
-    <td style="text-align: center;">Christmas break</td>
+    <td style="text-align: center; background-color:lightcoral;">Christmas break</td>
   </tr>
   <tr>
     <td>22/12/25</td>
-    <td style="text-align: center;">Christmas break</td>
+    <td style="text-align: center; background-color:lightcoral">Christmas break</td>
   </tr>
   <tr>
     <td>29/12/25</td>
-    <td style="text-align: center;">Christmas break</td>
+    <td style="text-align: center; background-color:lightcoral">Christmas break</td>
   </tr>
     <tr>
     <td>05/01/26</td>
