--- a/schedule.html
+++ b/schedule.html
@@ -129,6 +129,7 @@ a:hover {
     <td style="text-align: center;">Assessment week 02</td>
   </tr>
 </table>
+<p><span style="background-color:orange;">Delivered by guest lecturer from Man Met Careers</span></p>
 </body>
 </html>
 
