--- a/schedule.html
+++ b/schedule.html
@@ -55,7 +55,8 @@ a:hover {
   </tr>
   <tr>
     <td>01 &middot; 29/09/25</td>
-    <td>Module introduction, being a mathematician</td>
+    <td>Module introduction,<br>
+      being a mathematician</td>
     <td></td>
   </tr>
   <tr>
