--- a/schedule.html
+++ b/schedule.html
@@ -57,7 +57,12 @@ a:hover {
     <td>01 &middot; 29/09/25</td>
     <td>Module introduction,<br>
       being a mathematician</td>
-    <td></td>
+    <td>
+      <ul>
+        <li>Lecture <a href="./slides/week01.pdf" target="_blank">slides</a></li>
+        <li>Lab <a href="./slides/week01lab.pdf" target="_blank">slides</a></li>
+      </ul>
+    </td>
   </tr>
   <tr>
     <td>02 &middot; 06/10/25</td>
