--- a/schedule.html
+++ b/schedule.html
@@ -59,8 +59,11 @@ a:hover {
       being a mathematician</td>
     <td>
       <ul>
-        <li>Lecture <a href="./slides/week01.pdf" target="_blank">slides</a></li>
-        <li>Lab <a href="./slides/week01lab.pdf" target="_blank">slides</a></li>
+        <li>Lecture <a href="./slides/week01.pdf" target="_blank">slides.</a></li>
+        <li>Lab <a href="./slides/week01lab.pdf" target="_blank">slides.</a></li>
+        <li>The \(\LaTeX\) <a href="./slides/firstproof.tex" target="_blank">source file</a> of the proof of the evenness result.</li>
+        <hr>
+        <li>Some</li>
       </ul>
     </td>
   </tr>
