--- a/schedule.html
+++ b/schedule.html
@@ -63,6 +63,7 @@ a:hover {
         <li>Lab <a href="./slides/week01lab.pdf" target="_blank">slides.</a></li>
         <li>The \(\LaTeX\) <a href="./slides/firstproof.tex" target="_blank">source file</a> of the proof of the evenness result.</li>
         <hr>
+        Some
         <li>Some</li>
       </ul>
     </td>
