--- a/schedule.html
+++ b/schedule.html
@@ -63,7 +63,7 @@ a:hover {
         <li>Lab <a href="./slides/week01lab.pdf" target="_blank">slides.</a></li>
         <li>The \(\LaTeX\) <a href="./slides/firstproof.tex" target="_blank">source file</a> of the proof of the evenness result.</li>
         <hr>
-        Some follow-up resource
+        Some follow-up resources
         <li><a href="https://www.bbc.co.uk/sounds/play/m0019ytj" target="_blank">How to teach maths</a>, an episode of <em>The Infinite Monkey Cage</em>, an entertaining BBC radio science programme</li>
         <li><a href="https://www.youtube.com/watch?v=M64HUIJFTZM" target="_blank">The unexpectedly hard windmill question (2011 IMO, Q2)</a>, a video on mathematical proof ideas, from the excellent YouTuber mathematician <a href="https://www.youtube.com/@3blue1brown" target="_blank">Grant Sanderson</a></li>
       </ul>
