--- a/schedule.html
+++ b/schedule.html
@@ -61,7 +61,7 @@ a:hover {
       <ul>
         <li>Lecture <a href="./slides/week01.pdf" target="_blank">slides.</a></li>
         <li>Lab <a href="./slides/week01lab.pdf" target="_blank">slides.</a></li>
-        <li>The \(\LaTeX\) <a href="./slides/firstproof.tex" target="_blank">source file</a> of the proof of the evenness result.</li>
+        <li>The \(\LaTeX\) <a href="./slides/firstproof.tex" target="_blank" download>source file</a> of the proof of the evenness result.</li>
         <hr>
         Some follow-up resources
         <li><a href="https://www.bbc.co.uk/sounds/play/m0019ytj" target="_blank">How to teach maths</a>, an episode of <em>The Infinite Monkey Cage</em>, an entertaining BBC radio science programme</li>
