--- a/schedule.html
+++ b/schedule.html
@@ -73,7 +73,13 @@ a:hover {
   <tr>
     <td>02 &middot; 06/10/25</td>
     <td>\( \LaTeX \) and writing mathematics</td>
-  <td></td>
+  <td>
+    <ul>
+      <li>
+        A short <a href="./Latex_tutorial_instructions.pdf" target="_blank">\(\LaTeX\) tutorial</a> guide. 
+      </li>
+    </ul>
+  </td>
 </tr>
   <tr>
     <td>03 &middot; 13/10/25</td>
