--- a/schedule.html
+++ b/schedule.html
@@ -67,6 +67,10 @@ a:hover {
         <li><a href="https://www.bbc.co.uk/sounds/play/m0019ytj" target="_blank">How to teach maths</a>, an episode of <em>The Infinite Monkey Cage</em>, an entertaining BBC radio science programme</li>
         <li><a href="https://www.youtube.com/watch?v=M64HUIJFTZM" target="_blank">The unexpectedly hard windmill question (2011 IMO, Q2)</a>, a video on mathematical proof ideas, from the excellent YouTuber mathematician <a href="https://www.youtube.com/@3blue1brown" target="_blank">Grant Sanderson</a></li>
         <li>Here is a recent mathematics <a href="http://dx.doi.org/10.1007/s11854-023-0323-y" target="_blank" rel="noopener">research paper by Terence Tao and Tamar Ziegler</a>. Observe the style of writing that is used in it.</li>
+        <hr>
+        <li>
+          Lecture on a first $\LaTeX\ $ document.
+        </li>
       </ul>
     </td>
   </tr>
