--- a/schedule.html
+++ b/schedule.html
@@ -69,7 +69,7 @@ a:hover {
         <li>Here is a recent mathematics <a href="http://dx.doi.org/10.1007/s11854-023-0323-y" target="_blank" rel="noopener">research paper by Terence Tao and Tamar Ziegler</a>. Observe the style of writing that is used in it.</li>
         <hr>
         <li>
-          Lecture on a first $\LaTeX\ $ document.
+          Lecture on a first \(\LaTeX\ \) document.
         </li>
       </ul>
     </td>
