--- a/schedule.html
+++ b/schedule.html
@@ -80,7 +80,7 @@ a:hover {
   <td>
     <ul>
       <li>
-        A short <a href="./Latex_tutorial_instructions.pdf" target="_blank">\(\LaTeX\) tutorial</a> guide. 
+        Lab session: A short <a href="./Latex_tutorial_instructions.pdf" target="_blank">\(\LaTeX\) tutorial</a>.
       </li>
     </ul>
   </td>
