--- a/schedule.html
+++ b/schedule.html
@@ -71,6 +71,15 @@ a:hover {
         <li>
           Lecture on a first \(\LaTeX\) document.
         </li>
+        <li>
+          Lecture <a href=""https://mmutube.mmu.ac.uk/media/gde01a/1_aboa6p1t" target="_blank">capture recording</a>.
+        </li>
+        <li>
+          Lecture <a href="./boards/lec01_marked.pdf" target="_blank">blackboards</a>.
+        </li>
+        <li>
+          <a href="https://www.overleaf.com/read/pvqnkvnkxnmh#f15631" target="_blank">Euclid's proof on Overleaf</a> that we prepared in the lecture. 
+        </li>
       </ul>
     </td>
   </tr>
