--- a/schedule.html
+++ b/schedule.html
@@ -72,7 +72,7 @@ a:hover {
           Lecture on a first \(\LaTeX\) document.
         </li>
         <li>
-          Lecture <a href=""https://mmutube.mmu.ac.uk/media/gde01a/1_aboa6p1t" target="_blank">capture recording</a>.
+          Lecture <a href="https://mmutube.mmu.ac.uk/media/gde01a/1_aboa6p1t" target="_blank">capture recording</a>.
         </li>
         <li>
           Lecture <a href="./boards/lec01_marked.pdf" target="_blank">blackboards</a>.
