--- a/schedule.html
+++ b/schedule.html
@@ -90,6 +90,10 @@ a:hover {
     <ul>
       <li>
         Lab session: A short <a href="./Latex_tutorial_instructions.pdf" target="_blank">\(\LaTeX\) tutorial</a>.
+          <ul>
+              <li>Follow the step-by-step guide above to learn the basics of \(\LaTeX \) typesetting.</li>
+              <li>If you finish the guide in the lab then take a look at this page about [Mersenne primes and their exponents](./mersenne.html){target="_blank"} and try typesetting a solution to the problem contained there.</li>
+            </ul>
       </li>
     </ul>
   </td>
