--- a/mersenne.html
+++ b/mersenne.html
@@ -214,9 +214,9 @@ class="math inline">\(r\)</span> and <span
 class="math inline">\(s\)</span> with <span class="math inline">\(1 \lt
 r\)</span> and <span class="math inline">\(1 \lt s\)</span>. Now try to
 construct a factorisation of the Mersenne number, which will show that
-it is composite. Start with <span class="math display">\[2^n - 1 =
-2^{rs} - 1 = \left ( 2^r \right )^s - 1^s = \dots ,\]</span> and
-continue by using a stanard polynomial factorisation result for the
-difference of powers.</p>
+it is composite. The central part of the argument starts with <span
+class="math display">\[2^n - 1 = 2^{rs} - 1 = \left ( 2^r \right )^s -
+1^s = \dots ,\]</span> and continue by using a stanard polynomial
+factorisation result for the difference of powers.</p>
 </body>
 </html>
