--- a/mersenne.html
+++ b/mersenne.html
@@ -167,9 +167,13 @@
       vertical-align: middle;
     }
   </style>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js"
   type="text/javascript"></script>
+  <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
+  <![endif]-->
 </head>
 <body>
 <header id="title-block-header">
@@ -216,7 +220,7 @@ r\)</span> and <span class="math inline">\(1 \lt s\)</span>. Now try to
 construct a factorisation of the Mersenne number, which will show that
 it is composite. The central part of the argument starts with <span
 class="math display">\[2^n - 1 = 2^{rs} - 1 = \left ( 2^r \right )^s -
-1^s = \dots ,\]</span> and continue by using a stanard polynomial
+1^s = \dots ,\]</span> and continue by using a standard polynomial
 factorisation result for the difference of powers.</p>
 </body>
 </html>
