--- a/mersenne.html
+++ b/mersenne.html
@@ -167,13 +167,9 @@
       vertical-align: middle;
     }
   </style>
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js"
   type="text/javascript"></script>
-  <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
-  <![endif]-->
 </head>
 <body>
 <header id="title-block-header">
@@ -205,8 +201,8 @@ class="math inline">\(n\)</span> is also prime</em>.</p>
 argument. We normally prove the equivalent <em>contra-postive</em>
 statement:</p>
 <p><strong>Theorem</strong>: <em>If the number <span
-class="math inline">\(n\)</span> is composite, then associated Mersenne
-number <span class="math inline">\(2^n -1\)</span> is also
+class="math inline">\(n\)</span> is composite, then the associated
+Mersenne number <span class="math inline">\(2^n -1\)</span> is also
 composite.</em></p>
 <p>Try to obtain an argument that proves this theorem, and type it up
 using <span class="math inline">\(\LaTeX\)</span>. If you are struggling
