--- a/schedule.html
+++ b/schedule.html
@@ -94,7 +94,7 @@ a:hover {
               <li>Follow the step-by-step guide above to learn the basics of \(\LaTeX \) typesetting.</li>
               <li>If you finish the guide in the lab then take a look at this page about <a href="./mersenne.html" target="_blank">Mersenne primes and their exponents</a> and try typesetting a solution to the problem contained there.</li>
               <hr>
-              <li>Lecture on further \(\LaTeX \) examples and coursework introuction.</li>
+              <li>Lecture on further \(\LaTeX \) examples and coursework introduction.</li>
             </ul>
       </li>
     </ul>
