--- a/schedule.html
+++ b/schedule.html
@@ -95,6 +95,9 @@ a:hover {
               <li>If you finish the guide in the lab then take a look at this page about <a href="./mersenne.html" target="_blank">Mersenne primes and their exponents</a> and try typesetting a solution to the problem contained there.</li>
             </ul>
       </li>
+      <hr>
+      <li>Lecture <a href="https://mmutube.mmu.ac.uk/media/6G4Z3009_2526_9F_Lec-s1-full/1_78wn9nhb" target="_blank">capture recording.</a></li>
+      <li>The <a href="https://www.overleaf.com/read/tgxnccppbhxb#ba9476" target="_blank">\(\LaTeX\ \) document</a> from the lecture, on Overleaf.</li>
     </ul>
   </td>
 </tr>
