--- a/schedule.html
+++ b/schedule.html
@@ -104,8 +104,21 @@ a:hover {
 </tr>
   <tr>
     <td>03 &middot; 13/10/25</td>
-    <td>\( \LaTeX \) and writing mathematics</td>
-  <td></td>
+    <td><ul>
+      <li>\( \LaTeX \) and writing mathematics.
+        </li>
+        </ul>
+      </td>
+  <td>
+    <ul>
+      <li>
+        Lab session: beginning group project discussions. Please sit according to this <a href="./seating_plan.pdf" target="_blank">seating plan.</a>
+      </li>
+      <li>
+        Working on the LaTeX mathematics challenges from <a href="./Further_LaTeX_examples.pdf" target="_blank">last week's lecture \( \LaTeX\ \) file.</a> 
+      </li>
+    </ul>
+  </td>
 </tr>
   <tr>
     <td>04 &middot; 20/10/25</td>
