--- a/schedule.html
+++ b/schedule.html
@@ -117,6 +117,10 @@ a:hover {
       <li>
         Working on the LaTeX mathematics challenges from <a href="./Further_LaTeX_examples.pdf" target="_blank">last week's lecture \( \LaTeX\ \) file.</a> 
       </li>
+      <hr>
+      <li>
+        Lecture <a href="./maths_report_writing.pptx" target="_blank" download>slides</a> on mathematical report writing and a <a href="./maths_report_writing.pdf" target="_blank">PDF version.</a>
+      </li>
     </ul>
   </td>
 </tr>
